--- a/less/widgets.less
+++ b/less/widgets.less
@@ -6,9 +6,10 @@
     margin: 0;
     a{
         display: block;
-        .hide-text;
     }
+  .logo-tagline{ display: block; font-size: 16px;}
 }
+.widget-logo .image a{ .hide-text; .nopadding; }
 
 /* Copyright info, designed by and expose logo widget settings */
 .widget-copyrightinfo,
